--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/hello-astar/koa-chat#readme",
   "dependencies": {
     "koa": "^2.7.0",
-    "koa-route": "^3.2.0",
+    "koa-router": "^9.4.0",
     "koa-static": "^5.0.0",
     "koa-websocket": "^6.0.0"
   }
