--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "koa": "^2.7.0",
     "koa-router": "^9.4.0",
     "koa-static": "^5.0.0",
-    "koa-websocket": "^6.0.0"
+    "koa-websocket": "^6.0.0",
+    "sequelize": "^6.3.5",
+    "uuid": "^8.3.0"
   }
 }
