--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "koa-router": "^9.4.0",
     "koa-static": "^5.0.0",
     "koa-websocket": "^6.0.0",
-    "sequelize": "^6.3.5",
+    "mongoose": "^5.10.5",
     "uuid": "^8.3.0"
   }
 }
