--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "dependencies": {
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.3.0",
+    "koa-json-error": "^3.1.2",
+    "koa-parameter": "^3.0.1",
     "koa-router": "^9.4.0",
     "koa-static": "^5.0.0",
     "koa-websocket": "^6.0.0",
