--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "koa-router": "^9.4.0",
     "koa-session": "^6.1.0",
     "koa-static": "^5.0.0",
-    "koa-websocket": "^6.0.0",
     "mongoose": "^5.10.5",
     "qiniu": "^7.3.2",
+    "socket.io": "^3.1.0",
+    "socketio-jwt": "^4.6.2",
     "svg-captcha": "^1.4.0",
     "uuid": "^8.3.0"
   }
