--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "koa-conditional-get": "^3.0.0",
     "koa-json-error": "^3.1.2",
     "koa-jwt": "^4.0.0",
+    "koa-logger": "^3.2.1",
     "koa-parameter": "^3.0.1",
     "koa-router": "^9.4.0",
     "koa-session": "^6.1.0",
     "koa-static": "^5.0.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.5",
     "qiniu": "^7.3.2",
     "socket.io": "^3.1.0",
