--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "koa-router": "^9.4.0",
     "koa-session": "^6.1.0",
     "koa-static": "^5.0.0",
+    "module-alias": "^2.2.2",
     "moment": "^2.29.1",
     "mongoose": "^5.10.5",
     "nodemon": "^2.0.7",
@@ -44,5 +45,14 @@
     "socketio-jwt": "^4.6.2",
     "svg-captcha": "^1.4.0",
     "uuid": "^8.3.0"
+  },
+  "_moduleAliases": {
+    "@root": ".",
+    "@config": "./config",
+    "@controllers": "./controllers",
+    "@middlewares": "./middlewares",
+    "@models": "./models",
+    "@routes": "./routes",
+    "@utils": "./utils"
   }
 }
