--- a/package.json
+++ b/package.json
@@ -39,12 +39,10 @@
     "module-alias": "^2.2.2",
     "moment": "^2.29.1",
     "mongoose": "^5.10.5",
-    "nodemon": "^2.0.7",
     "qiniu": "^7.3.2",
     "socket.io": "^3.1.0",
     "socketio-jwt": "^4.6.2",
-    "svg-captcha": "^1.4.0",
-    "uuid": "^8.3.0"
+    "svg-captcha": "^1.4.0"
   },
   "_moduleAliases": {
     "@root": ".",
@@ -54,5 +52,8 @@
     "@models": "./models",
     "@routes": "./routes",
     "@utils": "./utils"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
