--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hello-astar/koa-chat.git"
+    "url": "https://github.com/hello-astar/koa-chat.git"
   },
   "keywords": [
     "node",
