--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon node app.js",
     "dev:debug": "cross-env NODE_ENV=development DEBUG=* nodemon node app.js",
+    "init": "node init/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
