--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "cross-env NODE_ENV=development nodemon node app.js",
     "dev:debug": "cross-env NODE_ENV=development DEBUG=* nodemon node app.js",
     "init": "node init/index.js",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
