--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "cross-env NODE_ENV=development nodemon node app.js",
     "dev:debug": "cross-env NODE_ENV=development DEBUG=* nodemon node app.js",
     "init": "node init/index.js",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "version": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -61,6 +61,12 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "cz-conventional-changelog": "^3.3.0",
     "nodemon": "^2.0.7"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
