--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "axios": "^0.21.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
-    "koa-bodyparser": "^4.3.0",
+    "koa-body": "^4.2.0",
     "koa-compress": "^5.0.1",
     "koa-conditional-get": "^3.0.0",
     "koa-etag": "^4.0.0",
