--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.10.5",
     "qiniu": "^7.3.2",
+    "redis": "^4.0.1",
     "sharp": "^0.28.1",
     "socket.io": "^3.1.0",
     "socketio-jwt": "^4.6.2",
